--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,16 @@ target/
 profile_default/
 ipython_config.py
 
+# node.js
+node_modules/
+.env
+
+# Python
+__pycache__/
+*.py[cod]
+venv/
+
+
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
