--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ node_modules/
 __pycache__/
 *.py[cod]
 venv/
-
+serviceapi.json
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
